fix(pages): media profile parts items alignment
@media.profile-parts now uses same align-items as desktop view resulting in a more appealing look when opening individual bey wiki sites

--- a/docs/styles.css
+++ b/docs/styles.css
@@ -3032,9 +3032,9 @@ body.dark .wiki-card-rank.rank-bronze {
         font-size: 1.5rem;
     }
     
-    .profile-parts {
-        align-items: center;
-    }
+    /* .profile-parts {
+        align-items: ;
+    } */
     
     .stats-grid {
         grid-template-columns: repeat(2, 1fr);
